--- a/index.html
+++ b/index.html
@@ -12,22 +12,20 @@
 </head>
 
 <body>
-    <div class="container-flex">
-        <div class="row">
-            <div class="col">
-                <div class=" bg-light p-5 rounded-lg m-3 shadow">
-                    <h1 class="display-4">Belly Button Biodiversity Dashboard</h1>
-                    <p class="lead">Use the interactive charts below to explore the dataset</p>
-                    <hr class="my-4">
-                    <p>Explore the <a href="http://robdunnlab.com/projects/belly-button-biodiversity/">Belly Button Biodiversity dataset</a> which catalogs the microbes that colonize human navels.</p>
-                    <p>The dataset reveals that a small handful of microbial species (also called operational taxonomic units, or OTUs, in the study) were present in more than 70% of people, while the rest were relatively rare.</p>
-                </div>
-            </div>
-        </div>
+    <!-- Introduction -->
+<div class="p-5 jumbotron">
+    <h2 class="h1-responsive", style="color:#e83e8c">Belly Button Biodiversity Dashboard</h2>
+    <p class="lead">Use the interactive charts below to explore the dataset</p>
+    <hr class="my-4">
+          <p>Explore the <a href="http://robdunnlab.com/projects/belly-button-biodiversity/">Belly Button Biodiversity dataset</a> which catalogs the microbes that colonize human navels.</p>
+          <p>The dataset reveals that a small handful of microbial species (also called operational taxonomic units, or OTUs, in the study) were present in more than 70% of people, while the rest were relatively rare.</p>
+
+    </p>
+</div>
         <div class="row">
             <div class="col">
                 <div class="card text-dark bg-light mb-3 shadow h-100">
-                    <div class="card-header">Demographic Info</div>
+                    <div class="card-header", style="color:#e83e8c">Demographic Info</div>
                     <div class="card-body">
                         <h5 class="card-title"></h5>
                         <select id="selDataset" onchange="optionChanged(this.value)"></select>
@@ -39,7 +37,7 @@
             </div>
             <div class="col">
                 <div class="card text-dark bg-light mb-3 shadow h-100">
-                    <div class="card-header">Top 10 OTUs Per Subject</div>
+                    <div class="card-header", style="color:#e83e8c">Top 10 OTUs Per Subject</div>
                     <div class="card-body">
                         <div id="bar"></div>
                     </div>
@@ -49,7 +47,7 @@
         <div class="row">
             <div class="col">
                 <div class="card text-dark bg-light mb-3 shadow">
-                    <div class="card-header">OTU IDs vs Sample Values</div>
+                    <div class="card-header", style="color:#e83e8c">OTU IDs vs Sample Values</div>
                     <div class="row">
                         <div id="bubble"></div>
                     </div>
